--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,4 +14,14 @@
 body {
   margin: 0;
   background-color: theme('colors.bg1');
+  font-family: 'Inter', sans-serif;
+}
+
+p {
+  color: theme('colors.text2');
+}
+
+h1, h2, h3, h4, button:not(.no-styles) {
+  font-family: 'IBM Plex Mono', monospace;
+  color: theme('colors.text1')
 }
