--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,11 +40,15 @@ h1 {
 button:not(.no-styles) {
   background-color: theme('colors.accent1');
   padding: 1rem;
-  border-radius: 2rem;
+  border-radius: 0.5rem;
   transition: opacity 0.3s ease;
   
   &:hover {
     opacity: 0.8;
+  }
+
+  &.contrast {
+    background-color: theme('colors.bg2');
   }
 }
 
